Shop: Fixup shop always being visible
The status checked is an observable, it needs to be called to
be accessed. This is now done properly.

--- a/src/.vscode/settings.json
+++ b/src/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
+    "files.trimTrailingWhitespace": true,
     "editor.rulers": [ 150 ],
     "workbench.colorCustomizations": {
         "editorRuler.foreground": "#0b80ce"
