Homogenize line endings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
     "editor.rulers": [ 150 ],
     "workbench.colorCustomizations": {
         "editorRuler.foreground": "#0b80ce"
-    }
+    },
+    "files.eol": "\n"
 }
