Hatchery: Add egg breeding tests

--- a/tst/package.json
+++ b/tst/package.json
@@ -1,7 +1,7 @@
 {
     "license": "UNLICENSED",
     "scripts": {
-        "test": "node node_modules/jest/bin/jest.js --colors"
+        "test": "node node_modules/jest/bin/jest.js --colors --verbose"
     },
     "type": "module"
 }
